<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">First Aid</string>
    <string name="back">Back</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="immediate_actions_title">Immediate Actions:\n</string>
    <string name="search">Search</string>
    <string name="anaphylaxis_overview" tools:ignore="UnusedResources">A life-threatening allergic reaction (anaphylaxis) can cause shock, a sudden drop in blood pressure and trouble breathing. In people who have an allergy, anaphylaxis can occur minutes after exposure to a specific allergy-causing substance (allergen). In some cases, there may be a delayed reaction, or anaphylaxis may occur without an obvious trigger.</string>
    <string name="anaphylaxis_immediate_actions" tools:ignore="UnusedResources">Immediately call 911 or your local medical emergency number.\nAsk if the person is carrying an epinephrine autoinjector (EpiPen, Auvi-Q, others) to treat an allergic attack.\nIf the person needs to use an autoinjector, ask whether you should help inject the medication. This is usually done by pressing the autoinjector against the person\'s thigh.\nHave the person lie face up and be still.\nLoosen tight clothing and cover the person with a blanket. Don\'t give the person anything to drink.\nIf there\'s vomiting or bleeding from the mouth, turn the person to the side to prevent choking.\nIf there are no signs of breathing, coughing or movement, begin CPR. Do uninterrupted chest presses — about 100 every minute — until paramedics arrive.\nGet emergency treatment even if symptoms start to improve. After anaphylaxis, it\'s possible for symptoms to start again (recur). Monitoring in a hospital for several hours is usually necessary.\n</string>
    <string name="symptoms_title">Symptoms:\n</string>
    <string name="anaphylaxis_symptoms" tools:ignore="UnusedResources">Skin reactions, including hives, itching, and skin that becomes flushed or changes color\nSwelling of the face, eyes, lips or throat\nNarrowing of the airways, leading to wheezing and trouble breathing or swallowing\nA weak and rapid pulse\nNausea, vomiting or diarrhea\nDizziness, fainting or unconsciousness\n\nSome common anaphylaxis triggers include:\n\nMedications\nLatex\nFoods such as peanuts, tree nuts, fish and shellfish\nInsect stings from bees, yellow jackets, wasps, hornets and fire ants\n\nIf you\'ve had any kind of severe allergic reaction in the past, ask your doctor if you should be prescribed an epinephrine autoinjector to carry with you.</string>
    <string name="anaphylaxis_common_triggers_text" tools:ignore="UnusedResources">Medications\nLatex\nFoods such as peanuts, tree nuts, fish and shellfish\nInsect stings from bees, yellow jackets, wasps, hornets and fire ants</string>
    <string name="anaphylaxis_treatment_and_aftercare_text" tools:ignore="UnusedResources">If you\'re with someone having symptoms of anaphylaxis, don\'t wait to see whether symptoms get better. Seek emergency treatment right away. In severe cases, untreated anaphylaxis can lead to death within half an hour.\n\nAn antihistamine pill, such as diphenhydramine (Benadryl), isn\'t enough to treat anaphylaxis. These medications can help relieve allergy symptoms, but they work too slowly in a severe reaction.</string>
    <string name="anaphylaxis_prevention_and_preparedness_text" tools:ignore="UnusedResources">Immediately call 911 or your local medical emergency number.\nAsk if the person is carrying an epinephrine autoinjector (EpiPen, Auvi-Q, others) to treat an allergic attack.\nIf the person needs to use an autoinjector, ask whether you should help inject the medication. This is usually done by pressing the autoinjector against the person\'s thigh.\nHave the person lie face up and be still.\nLoosen tight clothing and cover the person with a blanket. Don\'t give the person anything to drink.\nIf there\'s vomiting or bleeding from the mouth, turn the person to the side to prevent choking.\nIf there are no signs of breathing, coughing or movement, begin CPR. Do uninterrupted chest presses — about 100 every minute — until paramedics arrive.\nGet emergency treatment even if symptoms start to improve. After anaphylaxis, it\'s possible for symptoms to start again (recur). Monitoring in a hospital for several hours is usually necessary.</string>
    <string name="anaphylaxis_term" tools:ignore="UnusedResources">Anaphylaxis</string>
    <string name="poison_control">POISON CONTROL</string>
    <string name="image_desc">Image showing details about the selected first aid topic</string>
    <string name="disclaimer_text">All information and images were sourced from the Mayo Clinic\'s official website.</string>
    <string name="disclaimer_full_text">All information and images were sourced from the Mayo Clinic\'s official website. Disclaimer: This information is not intended as a substitute for professional medical advice, emergency treatment or formal first-aid training. Don\'t use this information to diagnose or develop a treatment plan for a health problem or disease without consulting a qualified health care provider. If you\'re in a life-threatening or emergency medical situation, seek medical assistance immediately.</string>
    <string name="disclaimer_checkbox">Got it, do not show me this again</string>
    <string name="disclaimer_button_ok">Okay</string>
    <string name="cardiopulmonary_resuscitation_cpr">Cardiopulmonary Resuscitation (CPR)</string>
    <string name="cpr_intro">Cardiopulmonary resuscitation (CPR) is a lifesaving technique that\'s useful in many emergencies in which someone\'s breathing or heartbeat has stopped. For example, when someone has a heart attack or nearly drowns. The American Heart Association recommends starting CPR with hard and fast chest compressions. This hands-only CPR recommendation applies to both untrained bystanders and first responders.\n\nIf you\'re afraid to do CPR or unsure how to perform CPR correctly, know that it\'s always better to try than to do nothing at all. The difference between doing something and doing nothing could be someone\'s life.\n\nHere\'s advice from the American Heart Association:\n\nUntrained. If you\'re not trained in CPR or worried about giving rescue breaths, then provide hands-only CPR. That means uninterrupted chest compressions of 100 to 120 a minute until paramedics arrive (described in more detail below). You don\'t need to try rescue breathing.\nTrained and ready to go. If you\'re well-trained and confident in your ability, check to see if there is a pulse and breathing. If there is no pulse or breathing within 10 seconds, begin chest compressions. Start CPR with 30 chest compressions before giving two rescue breaths.\nTrained but rusty. If you\'ve previously received CPR training but you\'re not confident in your abilities, then just do chest compressions at a rate of 100 to 120 a minute. Details are described below.\nThe above advice applies to situations in which adults, children and infants need CPR, but not newborns. Newborns are babies up to 4 weeks old.\n\nCPR can keep oxygen-rich blood flowing to the brain and other organs until emergency medical treatment can restore a typical heart rhythm. When the heart stops, the body no longer gets oxygen-rich blood. The lack of oxygen-rich blood can cause brain damage in only a few minutes.\n\nIf you are untrained and have immediate access to a phone, call 911 or your local emergency number before beginning CPR. The dispatcher can tell you how to do the proper procedures until help arrives. To learn CPR properly, take an accredited first-aid training course, including CPR and how to use an automated external defibrillator (AED).\n\nBefore you begin\nBefore starting CPR, check:\n\nIs the environment safe for the person?\nIs the person conscious or unconscious?\nIf the person appears unconscious, tap or shake their shoulder and ask loudly, \"Are you OK?\"\nIf the person doesn\'t respond and you\'re with another person who can help, have one person call 911 or the local emergency number and get the AED, if one is available. Have the other person begin CPR.\nIf you are alone and have immediate access to a telephone, call 911 or your local emergency number before beginning CPR. Get the AED if one is available.\nAs soon as an AED is available, deliver one shock if instructed by the device, then begin CPR.\nRemember to spell C-A-B\nThe American Heart Association uses the letters C-A-B to help people remember the order to perform the steps of CPR.\n\nC: compressions\nA: airway\nB: breathing</string>
    <string name="cpr_chest_compressions_info">Compressions means you use your hands to push down hard and fast in a specific way on the person\'s chest. Compressions are the most important step in CPR. Follow these steps for performing CPR compressions:\n\nPut the person on their back on a firm surface.\nKneel next to the person\'s neck and shoulders.\nPlace the lower palm of your hand over the center of the person\'s chest, between the nipples.\nPlace your other hand on top of the first hand. Keep your elbows straight. Place your shoulders directly above your hands.\nPush straight down on the chest at least 2 inches (5 centimeters) but no more than 2.4 inches (6 centimeters). Use your entire body weight, not just your arms, when doing compressions.\nPush hard at a rate of 100 to 120 compressions a minute. The American Heart Association suggests performing compressions to the beat of the song \"Stayin\' Alive.\" Allow the chest to spring back after each push.\nIf you haven\'t been trained in CPR, continue chest compressions until there are signs of movement or until emergency medical personnel take over. If you have been trained in CPR, go on to opening the airway and rescue breathing.</string>
    <string name="cpr_chest_compressions">Compressions: Restore blood flow</string>
    <string name="cpr_open_airway">Airway: Open the Airway</string>
    <string name="cpr_airway_info">If you\'re trained in CPR and you\'ve performed 30 chest compressions, open the person\'s airway using the head-tilt, chin-lift maneuver. Put your palm on the person\'s forehead and gently tilt the head back. Then with the other hand, gently lift the chin forward to open the airway.</string>
    <string name="cpr_rescue_breathing">Breathing: Breathe for the person</string>
    <string name="cpr_rescue_breathing_info">Rescue breathing can be mouth-to-mouth breathing or mouth-to-nose breathing if the mouth is seriously injured or can\'t be opened. Current recommendations suggest performing rescue breathing using a bag-mask device with a high-efficiency particulate air (HEPA) filter.\n\nAfter opening the airway (using the head-tilt, chin-lift maneuver), pinch the nostrils shut for mouth-to-mouth breathing and cover the person\'s mouth with yours, making a seal.\nPrepare to give two rescue breaths. Give the first rescue breath — lasting one second — and watch to see if the chest rises.\nIf the chest rises, give a second breath.\nIf the chest doesn\'t rise, repeat the head-tilt, chin-lift maneuver and then give a second breath. Thirty chest compressions followed by two rescue breaths is considered one cycle. Be careful not to provide too many breaths or to breathe with too much force.\nContinue chest compressions to restore blood flow.\nAs soon as an automated external defibrillator (AED) is available, apply it and follow the prompts. Give one shock, then continue chest compressions for two more minutes before giving a second shock. If you\'re not trained to use an AED, a 911 operator or another emergency medical operator may be able to give you instructions. If an AED isn\'t available, go to step 5 below.\nContinue CPR until there are signs of movement or emergency medical personnel take over.</string>
    <string name="Resources">Resources</string>
</resources>