<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CPRActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardiopulmonary_resuscitation_cpr"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpr_intro"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/chest_compressions"
            android:contentDescription="@string/cpr_chest_compressions"
            android:scaleType="fitCenter"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpr_chest_compressions_info"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/open_airway"
            android:contentDescription="@string/cpr_open_airway"
            android:scaleType="fitCenter"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpr_airway_info"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/rescue_breathing"
            android:contentDescription="@string/cpr_rescue_breathing"
            android:scaleType="fitCenter"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpr_rescue_breathing_info"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</ScrollView>
