<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:justificationMode="inter_word"
            android:hyphenationFrequency="full"
            android:id="@+id/text_disclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/disclaimer_full_text" />
    </ScrollView>

    <CheckBox
        android:id="@+id/checkBox_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/disclaimer_checkbox" />

    <Button
        android:id="@+id/button_dismiss"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/disclaimer_button_ok"
        android:layout_marginTop="16dp" />
</LinearLayout>