<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <Button
        android:id="@+id/button_resources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Resources"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/emergency_call_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_call"
        android:layout_margin="8dp"
        android:textColor="@color/red"/>

    <Button
        android:id="@+id/poison_control_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poison_control"
        android:layout_margin="8dp"
        android:textColor="@color/green"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/medical_terms_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/contentBackgroundColor"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_medical_term" />

</LinearLayout>